# urban-data-platform

./: .gitignore  Dockerfile  README.md  docker-compose-airflow.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
dag/: 01_dag.py  test_urban_dag.py  urban_dag.py
dashboard/: app.py  style.css
dashboard/utils/: charts.py  components.py  data.py
dbt/: dbt_project.yml
dbt/models/marts/: amenities.sql  amenities_by_city.sql  building.sql  building_by_cities.sql  roads.sql  schema.yml  urban_density_score.sql
dbt/models/staging/: stg_osm_features.sql
